use switch expression