@@ -104,7 +104,7 @@ public class ExportForm extends Form implements InternalForm {
 	 * 						Note that this alignment is chosen when a resolution is equal or coarser.
 	 * @return The given resolutions mapped to a fitting calendar alignment.
 	 */
-	public static List<ExportForm.ResolutionAndAlignment> getResolutionAlignmentMap(List<Resolution> resolutions, Alignment alignmentHint) {
+	public static List<ResolutionAndAlignment> getResolutionAlignmentMap(List<Resolution> resolutions, Alignment alignmentHint) {
 
 		return resolutions.stream()
 				.map(r -> ResolutionAndAlignment.of(r, getFittingAlignment(alignmentHint, r)))
@@ -165,7 +165,7 @@ public class ExportForm extends Form implements InternalForm {
 
 
 		// Apply defaults to user concept
-		ExportForm.DefaultSelectSettable.enable(features);
+		DefaultSelectSettable.enable(features);
 
 		timeMode.resolve(context);
 
@@ -179,7 +179,7 @@ public class ExportForm extends Form implements InternalForm {
 			if (resolutionsFlat.size() != 1) {
 				throw new IllegalStateException("Abort Form creation, because coarser subdivision are requested and multiple resolutions are given. With 'alsoCreateCoarserSubdivisions' set to true, provide only one resolution.");
 			}
-			resolvedResolutions = resolutionsFlat.get(0).getThisAndCoarserSubdivisions();
+			resolvedResolutions = resolutionsFlat.getFirst().getThisAndCoarserSubdivisions();
 		}
 		else {
 			resolvedResolutions = resolutionsFlat;
@@ -193,11 +193,11 @@ public class ExportForm extends Form implements InternalForm {
 
 		static void enable(CQElement feature) {
 			switch (feature) {
-				case DefaultSelectSettable settable: settable.setDefaultSelects(); break;
+				case DefaultSelectSettable settable  -> settable.setDefaultSelects();
 				// CQNegation and CQDateRestriction chain CQElements and don't have selects themselves
-				case CQNegation negation: enable(negation.getChild()); break;
-				case CQDateRestriction dr: enable(dr.getChild()); break;
-				default: break;
+				case CQNegation negation -> enable(negation.getChild());
+				case CQDateRestriction dr -> enable(dr.getChild());
+				default -> {}
 			}
 		}
 
